--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ font-size:50px;
 
 <body>
 	<h1>
-	   Kurd Tool Server
+	   Kurd Tool Server v5.3
 	</h1>
-<a href="https://www.mediafire.com/download/lj0dmp988vqdd6l">
+<a href="https://www.mediafire.com/download/5tuamz65bv04ry3">
 	<div class="Open Link">
 		‌Download
     </div>
