--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ font-size:50px;
 	<div class="Open Link">
 		‌Download
     </div>
-        <a href="https://t.me/joinchat/OvvnwiQNYcA3NWIy">
+        <a href="https://t.me/kurdtoolserver">
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=70" height="70">
 </a>
