--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ background: linear-gradient(90deg, rgba(135,30,10,1) 7%, rgba(33,119,40,1) 200%)
         margin-bottom:14px;
         margin-top:14px;
         color:yellow;
+	      <h6>Latest Update</h6>
+<p>کۆتا ڤێرژنی بەرنامەکەمان ئێستا دەتوانی دایبگری</p>
+
      } a {
         margin-bottom:14px;
         margin-top:14px;
