--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@ background: linear-gradient(90deg, rgba(135,30,10,1) 7%, rgba(33,119,40,1) 200%)
         margin-bottom:14px;
         margin-top:14px;
         color:yellow;
-	      <h3>Latest Update</h3>
-<p>کۆتا ڤێرژنی بەرنامەکەمان ئێستا دەتوانی دایبگری</p>
 
      } a {
         margin-bottom:14px;
@@ -66,7 +64,10 @@ font-size:50px;
 <a href="https://www.mediafire.com/download/5tuamz65bv04ry3">
 	<div class="Open Link">
 		‌Download
-    </div>
+	</div>
+	
+	<h3>Latest Update !</h3>
+	
         <a href="https://t.me/joinchat/rrIqaJwb3uk4ZDQy">
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=70" height="70">
