--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@ font-size:50px;
 	<h1>
 	   Kurd Tool Server v5.3
 	</h1>
+	<p>Latest Update !</p>
 <a href="https://www.mediafire.com/download/5tuamz65bv04ry3">
 	<div class="Open Link">
 		‌Download
 	</div>
 	
-	<h3>Latest Update !</h3>
+	
 	
         <a href="https://t.me/joinchat/rrIqaJwb3uk4ZDQy">
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
