--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ font-size:50px;
 
 <body>
 	<h1>
-	   Kurd Tool Server v5.3
+	   Kurd Tool Server v5.4 NEW
 	</h1>
 	<p>Latest Update !</p>
 <a href="https://www.mediafire.com/download/enfgngzvo3n63cx">
