--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@ font-size:50px;
 		‌Download v5.7
     </div>
     
-    <h2>
-    بەرنامەی زیکر یادی خودا
-</h2>
+    <h2> 
+     بەرنامەی زیکر یادی خودا تەسبیح
+			      
+			      </h2>
 
 <a2 href="https://t.me/joinchat/OvvnwiQNYcA3NWIy">
          <img alt="Qries" src="https://h.top4top.io/p_2005go4kh2.png"
