--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ font-size:50px;
         color:white; 
 
  }h2 {
-        margin-bottom:14px;
-        margin-top:14px;
+        margin-bottom:24px;
+        margin-top:24px;
         color:yellow;
         
 
@@ -82,7 +82,7 @@ font-size:50px;
 	   Kurd Tool Server v5.7 New
 	</h1>
 	
-	        <a href="https://t.me/joinchat/OvvnwiQNYcA3NWIy">
+	        <a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=70" height="70">
 	
@@ -96,7 +96,7 @@ font-size:50px;
 			      
 			      </h2>
 
-<a href="https://t.me/joinchat/OvvnwiQNYcA3NWIy">
+<a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://h.top4top.io/p_2005go4kh2.png"
          width=70" height="70">
 
