--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ font-size:50px;
 		‌Download v5.7
     </div>
     
-    <h2> 
+    <text> 
      بەرنامەی زیکر یادی خودا تەسبیح
 			      
-			      </h2>
+			      </text>
 
 <a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://h.top4top.io/p_2005go4kh2.png"
