--- a/index.html
+++ b/index.html
@@ -91,10 +91,7 @@ font-size:50px;
 		‌Download v5.7
     </div>
     
-    <h2> 
-     بەرنامەی زیکر یادی خودا تەسبیح
-			      
-			      </h2>
+<p style="color:white;">به رنامه ى يادى خودا ته سبيح</p>
 
 <a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://h.top4top.io/p_2005go4kh2.png"
