--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ font-size:50px;
 <a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://h.top4top.io/p_2005go4kh2.png"
          width=80" height="80">
+			
+			<p style="color:white;">به رنامه ى يادى خودا ته سبيح</p>
 
 
 	
