--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ font-size:50px;
 	
     <a href="https://www.mediafire.com/download/8hhvn482yiuiik4">
 	<div2 class="Open Link">
-		‌Download v2.3
+		‌Download v2.3 new
     </div2>
     
 	    <p style="color:white;">به رنامه ى يادى خودا ته سبيح</p>
