--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ font-size:50px;
 		‌Download v2.3 new
     </div2>
     
-	    <p style="color:white;">به رنامه ى يادى خودا ته سبيح</p>
+	    <p style="black:white;">به رنامه ى يادى خودا ته سبيح</p>
 
 </a>
 </body>
