--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ background: linear-gradient(90deg, rgba(135,30,10,1) 7%, rgba(33,119,40,1) 200%)
           font-family:verdana;
           font-size:15px;
     } div {
-        margin-bottom:50px;
-        margin-top:50px;
-font-size:50px;
+        margin-bottom:100px;
+        margin-top:100px;
+font-size:100px;
         color:white; 
 
  }h2 {
@@ -102,7 +102,7 @@ font-size:50px;
 	
     <a3 href="https://www.mediafire.com/download/8hhvn482yiuiik4">
 	<div2 class="Open Link">
-		‌Download v2.3 new
+		‌Download v2.3 new یادی خودا تە سبیح
     </div2>
     
 	    
