--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ font-size:100px;
 	
 
 
-<a2 href="https://t.me/KtsOfficiall">
+<a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://h.top4top.io/p_2005go4kh2.png"
          width=80" height="80">
 			
@@ -110,7 +110,7 @@ font-size:100px;
 
 
 	
-    <a3 href="https://www.mediafire.com/download/8hhvn482yiuiik4">
+    <a href="https://www.mediafire.com/download/8hhvn482yiuiik4">
 	<div2 class="Open Link">
 		‌Download v2.3 
     </div2>
