--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@ background: linear-gradient(90deg, rgba(135,30,10,1) 7%, rgba(33,119,40,1) 200%)
         margin-bottom:100px;
         margin-top:100px;
 font-size:100px;
-        color:white; 
+        color:white;
+	    
+	    } div2 {
+        margin-bottom:100px;
+        margin-top:100px;
+font-size:100px;
+        color:white;
 
  }h2 {
         margin-bottom:24px;
