--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ background: linear-gradient(90deg, rgba(135,30,10,1) 7%, rgba(33,119,40,1) 200%)
    
     }
     div2{
-      padding:8px;
+      padding:10px;
       margin-top:50%;
       background: rgb(34,193,195);
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(252,176,69,1) 200%);
@@ -104,7 +104,7 @@ font-size:100px;
 		‌Download v5.7
     </div>
     
-			      <p style="color:white;">Yade Xuda Tasbeh</p>
+			      <p style="font-size:200%;">بەرنامەی یادی خودا تەسبیح</p>
 	
 
 
