--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ font-size:100px;
 
 <body>
 	<h1>
-	   Kurd Tool Server v5.8 New Latest! 
+	   Kurd Tool Server v5.8 New ! 
 	</h1>
 	
 	
@@ -99,7 +99,7 @@ font-size:100px;
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=80" height="80">
 	
-<a href="https://www.mediafire.com/download/9w8nfnx8dd0y36f">
+<a href="https://www.mediafire.coload/9w8nfnx8dd0y36f">
 	<div class="Open Link">
 		‌Download v5.8 
     </div>
