--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ font-size:100px;
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=80" height="80">
 	
-<a href="https://www.mediafire.coload/9w8nfnx8dd0y36f">
+<a href="https://www.mediafire.com/file/wt238sg79o27nnh/Kurd_Tool_Server_v5.8.apk/file">
 	<div class="Open Link">
 		‌Download v5.8 
     </div>
