--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ font-size:100px;
 
 <body>
 	<h1>
-	   Kurd Tool Server v5.8 New ! 
-		Update soon...
+	   Kurd Tool Server v5.9 New ! Update
+		
 	</h1>
 	
 	
@@ -100,7 +100,7 @@ font-size:100px;
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=80" height="80">
 	
-<a href="https://www.mediafire.com/file/wt238sg79o27nnh/Kurd_Tool_Server_v5.8.apk/file">
+<a href="https://www.mediafire.com/file/t8tzop69gtt56l8/kurd.toolserver5.9.apk/file">
 	<div class="Open Link">
 		‌Download v5.8 
     </div>
