--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ font-size:100px;
 
 <body>
 	<h1>
-	   Kurd Tool Server v5.9 New ! Update
+	   Kurd Tool Server v5.10 New ! Update
 		
 	</h1>
 	
@@ -100,9 +100,9 @@ font-size:100px;
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=80" height="80">
 	
-<a href="https://www.mediafire.com/file/t8tzop69gtt56l8/kurd.toolserver5.9.apk/file">
+<a href="https://www.mediafire.com/download/osjplm7ms5rli3g">
 	<div class="Open Link">
-		‌Download v5.9 
+		‌Download v5.10 
     </div>
     
 			      <p style="font-size:200%;">بەرنامەی یادی خودا تەسبیح</p>
