--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ font-size:100px;
 	   Kurd Tool Server v6.0 New ! Update
 		
 	</h1>
-	
+	<e>ئه كه ر به رنامه كه ئنستال نه بوو فيرزنى كون بسره وه<e
 	
 	        <a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
