--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@ font-size:100px;
 	   Kurd Tool Server v6.0 New ! Update
 		
 	</h1>
-	<e>ئه كه ر به رنامه كه ئنستال نه بوو فيرزنى كون بسره وه<e
+	
 	
 	        <a href="https://t.me/KtsOfficiall">
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=80" height="80">
 	
+	<e>ئه كه ر به رنامه كه ئنستال نه بوو فيرزنى كون بسره وه<e/>		      
+			      
 <a href="www.google.com">
 	<div class="Open Link">
 		‌Download v6.0
