--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ font-size:100px;
          <img alt="Qries" src="https://i.top4top.io/p_1933gq8u10.png"
          width=80" height="80">
 	
-	<e>ئه كه ر به رنامه كه ئنستال نه بوو فيرزنى كون بسره وه<e/>		      
 			      
-<a href="www.google.com">
+			      
+<a href="https://www.mediafire.com/download/20a1u8a4a6bjvh5">
 	<div class="Open Link">
 		‌Download v6.0
     </div>
